feature: add search

--- a/book_store/index.html
+++ b/book_store/index.html
@@ -23,15 +23,14 @@
 
     <section class="header-1">
 
-        <a href="#" class="logo"> <i class="fas fa-book"></i> bookly </a>
+        <a href="index.html" class="logo"> <i class="fas fa-book"></i> bookly </a>
 
-        <form action="" class="search-form">
-            <input type="search" name="" placeholder="search here..." id="search-box">
-            <label for="search-box" class="fas fa-search"></label>
+        <form action="search.html" class="search-form" id="searchForm" method="GET">
+            <input type="text" name="" placeholder="search here..." id="searchInput">
+            <button type="submit" class="fas fa-search" id="search-btn"></button>
         </form>
 
         <div class="icons">
-            <div id="search-btn" class="fas fa-search"></div>
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-shopping-cart"></a>
             <div id="login-btn" class="fas fa-user"></div>
@@ -807,9 +806,9 @@
 
 <!-- loader  -->
 
-<div class="loader-container">
+<!-- <div class="loader-container">
     <img src="image/loader-img.gif" alt="">
-</div>
+</div> -->
 
 
 
